--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="th">
 
 <head>
-    <title> Demo git</title>
+    <title> Demo git!!</title>
 </head>
 
 <body>
-    <h1>Demo Git</h1>
     <p>this is paragraph</p>
+    <p>this is new paragraph</p>
+    <p>this is another paragraph</p>
 </body>
 
 </html>
