change font color to red

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 
 <head>
     <title> Demo git!!</title>
+    <style>
+        p {
+            color: red;
+        }
+    </style>
 </head>
 
 <body>
